src/styles.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');

:root {
	--main-bg-color: #1d2027;
	--secondary-bg-color: #272a31;
	--input-bg-color: #10131a;
	--main-text-color: #e1e2ec;
	--secondary-text-color: #c2c6d6;
	--border-radius-s: 0.25rem;
	--border-radius-m: 0.5rem;
	--spacing-xs: 8px;
	--spacing-s: 16px;
	--spacing-m: 24px;
	--spacing-l: 32px;
	--text-size-s: 12px;
	--text-size-m: 14px;
	--text-size-l: 16px;
	--heading-default: 20px;
	--main-border: 1px solid #32353c;
	--secondary-border: 1px solid #3f3f46;
	--main-hover-color: #363941;
	--error-color: #ff4d4f;
	--button-primary-bg: #adc6ff;
	--button-primary-text: #002e6a;
	--transition: all 0.15s ease-in-out;
}

/* RESET */
*,
*::after,
*::before {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

svg {
	fill: currentColor;
}

label, input, button {
	font: inherit;
	color: inherit;
}

input, button {
	background: none;
	outline: none;
	border: none;
}

button {
	cursor: pointer;
	transition: var(--transition);
}

li {
	list-style-type: none;
}

body {
	min-height: 100dvh;
	font-family: Inter, sans-serif;
	background-color: #09090b;
	color: var(--main-text-color);
	font-size: var(--text-size-m);
	line-height: 1.25;
}

/* MAIN CONTAINER */
.container {
	min-height: 100dvh;
	display: grid;
	grid-template-columns: 250px auto;
}

/* SIDEBAR */
.sidebar {
	background-color: var(--main-bg-color);
	border-right: var(--main-border);
	display: grid;
	grid-template-rows: auto 1fr auto;

	> * {
		padding: var(--spacing-s);
	}

	& header {

		& h1 {
			font-size: var(--heading-default);
		}
	}

	& nav {
		border-top: var(--main-border);
		border-bottom: var(--main-border);

		& ul {
			display: flex;
			flex-direction: column;
			gap: var(--spacing-xs);
		}

		& ul li {
				display: flex;
				align-items: center;
				justify-content: space-between;
				color: var(--secondary-text-color);
				transition: var(--transition);
				padding: var(--spacing-xs);
				border-radius: var(--border-radius-m);
				cursor: pointer;

				& .controls {
					display: flex;
					align-items: center;
					gap: 2px;
				}

				& button {
					display: flex;
					align-items: center;
					justify-content: center;
					padding: 2px;
					border-radius: var(--border-radius-s);

					&:hover {
						background-color: var(--button-primary-bg);
						color: var(--button-primary-text);
					}
				}

				& svg {
					width: 16px;
					height: 16px;
				}
		
				&:hover {
					background-color: var(--main-hover-color);
				}
		
				&.selected {
					background-color: var(--button-primary-bg);
					color: var(--button-primary-text);
				}
			}
	} 

	& footer button {
		display: flex;
		align-items: center;
		justify-content: center;
		gap: var(--spacing-xs);
		width: 100%;
		padding-block: var(--spacing-xs);
		border-radius: var(--border-radius-m);
		background-color: var(--button-primary-bg);
		color: var(--button-primary-text);
		font-weight: 600;

		& svg {
			height: 20px;
			width: 20px;
		}
		
		&:hover {
			opacity: 0.8;
		
		}
	}
}

/* MODAL */
dialog {
	align-self: center;
	justify-self: center;
	color: var(--main-text-color);
	border-radius: var(--border-radius-m);
	background-color: var(--main-bg-color);
	border: var(--main-border);
	width: min(90%, 500px);
	
	&::backdrop {
		backdrop-filter: blur(4px) brightness(40%);
	}
}

.modal-form {
	display: grid;
	grid-template-rows: 1fr auto 1fr;

	> * {
		padding: var(--spacing-s) var(--spacing-m);
	}

	& .form-inputs {
		border-top: var(--main-border);
		border-bottom: var(--main-border);
		display: grid;
		gap: var(--spacing-s);
	}

	& footer {
		background-color: var(--secondary-bg-color);
	}
}

.modal-form header {
	display: flex;
	justify-content: space-between;
	align-items: center;

	& h3 {
		font-size: var(--heading-default);
	}

	> button[command="close"] {
		height: 24px;
		width: 24px;
		padding: 2px;
		border-radius: var(--border-radius-s);

		&:hover {
			background-color: var(--main-hover-color);
		}
	}
}

.form-inputs > div {
	display: grid;
	gap: var(--spacing-xs);

	& span {
		display: none;
	}

	& label, span {
		font-size: var(--text-size-s);
	}

	& label {
		color: var(--secondary-text-color);
	}

    & input {
		padding: var(--spacing-xs) var(--spacing-s);
		background-color: var(--input-bg-color);
		border-radius: var(--border-radius-m);
		border: var(--main-border);

		&:user-invalid + span {
			display: block;
			color: var(--error-color)
		}
	}
}

.modal-form footer {
	display: flex;
	justify-content: flex-end;
	gap: var(--spacing-s);

	& button {
		padding: var(--spacing-xs) var(--spacing-m);
		border-radius: var(--border-radius-m);
		font-size: var(--text-size-s);

		&[type="submit"] {
			background-color: var(--button-primary-bg);
			color: var(--button-primary-text);
			font-weight: 600;

			&:hover {
				opacity: 0.8;

			}
		}

		&[command="close"] {
			border: var(--main-border);

			&:hover {
				background-color: var(--input-bg-color);
			}
		}
	}
}

